--- a/FlipBoard.jl/Project.toml
+++ b/FlipBoard.jl/Project.toml
@@ -4,14 +4,16 @@ authors = ["hannahilea <hannahilea@users.noreply.github.com>", "aferguso2 <aferg
 version = "0.0.2"
 
 [deps]
-ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
 LibSerialPort = "a05a14c7-6e3b-5ba9-90a2-45558833e1df"
 
 [compat]
+Aqua = "0.6"
+LibSerialPort = "0.5.2"
 julia = "1.5"
 
 [extras]
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test"]
+test = ["Aqua", "Test"]
